fix: font contrast

--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -44,7 +44,7 @@
   border-radius: 4px;
   border: none;
   background: rgba(150, 150, 150, 0.2);/* rgba(255, 255, 255, 0.2); */
-  color: #aaa;/* #ffffff; */
+  color: #777;/* #ffffff; */
   font-size: 1.05rem;
   outline: none;
   cursor: pointer;
